[package]
name = "rust-provider-lib"
version = "0.1.0"
authors = ["Gusabary <gusabary@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3" }

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }