[package]
name = "splendor"
version = "0.1.0"
authors = ["Gusabary <gusabary@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-provider-lib = { path = "../rust-provider-lib" }
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3" }
rand = "0.8.3"

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`